Horizontal scroll issue solved in "new task" from while using dropdown for Windows

--- a/src/scss/task-panel/task-detail.scss
+++ b/src/scss/task-panel/task-detail.scss
@@ -115,6 +115,7 @@
     height: 100%;
     position: relative;
     overflow-y: overlay !important;
+    overflow-x: hidden;
     transform: translateZ(0);
 }
 
